--- a/capacity-project/pom.xml
+++ b/capacity-project/pom.xml
@@ -36,23 +36,40 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis</artifactId>
-            <version>3.3.1</version>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.72</version>
         </dependency>
         <dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis-spring</artifactId>
-            <version>1.3.2</version>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.1.3</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.1.9</version>
+        </dependency>
 
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -102,18 +119,13 @@
                         <artifactId>mybatis-generator-core</artifactId>
                         <version>1.3.5</version>
                     </dependency>
-                    <dependency>
-                        <groupId>com.guohualife.common.util</groupId>
-                        <artifactId>gh-util-db-generator</artifactId>
-                        <version>1.0.0-SNAPSHOT</version>
-                    </dependency>
                 </dependencies>
                 <!-- <executions> <execution> <id>Generate MyBatis Artifacts</id> <phase>install</phase> <goals> <goal>generate</goal> </goals> </execution> </executions> -->
-                <configuration>
+                <!--<configuration>
                     <verbose>true</verbose>
                     <overwrite>true</overwrite>
-                    <configurationFile>src/main/resources/mapper/config/mybatis-generator.xml</configurationFile>
-                </configuration>
+                    <configurationFile>src/main/resources/mapper/config/mybatis-generator.xmlx</configurationFile>
+                </configuration>-->
             </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
