--- a/capacity-project/src/main/resources/application.yml
+++ b/capacity-project/src/main/resources/application.yml
@@ -32,7 +32,7 @@ spring:
 mybatis:
   mapper-locations: classpath:mapper/*/*.xml  #注意：一定要对应mapper映射xml文件的所在路径
   type-aliases-package: com.sinosoft.capactity.db.pojo  # 注意：对应实体类的路径
- # config-locations: classpath:mapper/config/mybatis-generator.xmlx
+ # config-locations: classpath:mapper/config/mybatis-generator.xml
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
