--- a/capacity-project/src/main/resources/application.yml
+++ b/capacity-project/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 8081
 
 spring:
   datasource:
@@ -24,10 +24,12 @@ spring:
     poolPreparedStatements: true
     maxOpenPreparedStatements: 20
 
-    mvc:
-      view:
-        prefix:/
-        suffix :.html
+  mvc:
+    view:
+      prefix: /
+      suffix: .html
+ # resources:
+  #  static-locations: classpath:/
 ## 该配置节点为独立的节点，有很多同学容易将这个配置放在spring的节点下，导致配置无法被识别
 mybatis:
   mapper-locations: classpath:mapper/*/*.xml  #注意：一定要对应mapper映射xml文件的所在路径
